refactor(language level): Replace Collectors.toList with Stream#toList where applicable