@@ -39,7 +39,6 @@ import java.util.Collections;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.function.BiFunction;
-import java.util.stream.Collectors;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -158,6 +157,6 @@ final class VelocityBridgeManagement extends PlatformBridgeManagement<Player, Ne
     // players
     snapshot.properties().append("Players", this.proxyServer.getAllPlayers().stream()
       .map(this::createPlayerInformation)
-      .collect(Collectors.toList()));
+      .toList());
   }
 }
