@@ -37,7 +37,6 @@ import java.util.Collections;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.function.BiFunction;
-import java.util.stream.Collectors;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -154,6 +153,6 @@ final class WaterDogPEBridgeManagement extends PlatformBridgeManagement<ProxiedP
     // players
     snapshot.properties().append("Players", ProxyServer.getInstance().getPlayers().values().stream()
       .map(this::createPlayerInformation)
-      .collect(Collectors.toList()));
+      .toList());
   }
 }
